# codewars-collections

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  binary_regex.py  camel.py  fibonacci.py  get_task_descriptions.py  main.cpp  misc.py  pom.xml  preloaded.py  prepare_file.py  regex.py  template
1_kyu/: roboscript_ultimatum.md  roboscript_ultimatum.py
2_kyu/: assembler_interpreter_2.py  decode_the_morse_code_for_real.md  decode_the_morse_code_for_real.py  evaluate_math_expression.md  evaluate_math_expression.py  g.py  insane_coloured_triangles.md  insane_coloured_triangles.py  regex_parser.py  simpler_interactive_interpreter.py  skyscrapers.md  skyscrapers.py  sudoku_solver.py
3_kyu/: path_finder_3.md  path_finder_3.py  roboscript_3_interpreter.md  roboscript_3_interpreter.py  sudoku_solver.py
4_kyu/: boggle_word_checker.cpp  conway_s_game_of_life_unlimited_edition.md  conway_s_game_of_life_unlimited_edition.py  currying.py  currying_vs_partial_application.md  currying_vs_partial_application.py  decode_the_morse_code_advanced.md  decode_the_morse_code_advanced.py  explosive_sum.py  format_duration.md  format_duration.py  most_frequent_words.py  nesting_structure_comparison.md  nesting_structure_comparison.py  observed_pin.md  observed_pin.py  one_line_task_palindrome_string.py  one_line_task_squirrel_and_tree.md  one_line_task_squirrel_and_tree.py  one_line_task_zero_or_one.md  one_line_task_zero_or_one.py  palindrome_counter.py  path_finder_1.md  path_finder_1.py  path_finder_2.py  range_extraction.cpp  ranking_poker_hands.cpp  ranking_poker_hands.h  recover_a_secret_string_from_random_triplets.py  recover_secret_string.py  roboscript_2_interpreter.py  strings_mix.py  strip_comments.md  strip_comments.py  sudoku.py  sum_by_factors.py  sum_of_intervals.py
5_kyu/: a_chain_adding_function.md  a_chain_adding_function.py  best_travel.py  can_you_get_the_loop.md  can_you_get_the_loop.py  combining_predicates.md  combining_predicates.py  count_ip_addresses.md  count_ip_addresses.py  first_non_repeating_character.py  gap_in_primes.py  greed_is_good.md  greed_is_good.py  hashtag_generator.py  human_readable_time.py  int32_to_ipv4.py  integers_recreation_one.md  integers_recreation_one.py  is_my_friend_cheating.md  is_my_friend_cheating.py  last_digit_of_a_large_number.md  last_digit_of_a_large_number.py  maximum_subarray_sum.md  maximum_subarray_sum.py  memoized_fibonacci.md  memoized_fibonacci.py  multi_line_task.py  my_smallest_code_interpreter_aka_brainf_k.py  not_very_secure.py  perimeter_of_squares.md  perimeter_of_squares.py  pete_the_baker.md  pete_the_baker.py  pick_peaks.md  pick_peaks.py  primes_in_numbers.py  product_of_consecutive_fib_numbers.py  regex_password_validation.py  rgb_to_hex.h  roboscript_1_interpreter.py  (+13 more)
6_kyu/: 1_array.py  a_rule_of_divisibility_by_13.py  alphabet_slice_puzzle.py  are_they_the_same.py  backspaces_in_string.py  bit_counting.py  break_camel_case.py  build_a_pile_of_cubes.md  build_a_pile_of_cubes.py  camel_case_method.py  character_counter_and_bar_graph.py  code_golf_collatz_shortcut_function.md  code_golf_collatz_shortcut_function.py  code_golf_pyramid.md  code_golf_pyramid.py  consecutive_strings.py  consonant_value.md  consonant_value.py  count_characters.py  data_reverse.py  decipher_this.py  decode_the_morse_code.py  duplicate_encoder.py  (+57 more)
c/: .gitignore  CMakeLists.txt  main.c
c/6_kyu/: is_prime.h
c/solutions/6kyu/: is_prime.c
c/src/: test_macros.hpp
c/src/solutions/6kyu/is_a_number_prime/: README.md  solution_is_a_number_prime.c  solution_is_a_number_prime.h  test_is_a_number_prime.cpp
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  test_main.cpp  vcpkg.json
cpp/4_kyu/: next_biggest_number.h
cpp/5_kyu/: rgb_to_hex.cpp
cpp/7_kyu/: count_divisors.cpp  count_vowels.h
cpp/solutions/4kyu/: boggle_word_checker.h  matrix_determinant.cpp  matrix_determinant.h  next_biggest_number.cpp  range_extraction.h
cpp/solutions/5kyu/rgb_to_hex_conversion/: solution_rgb_to_hex_conversion.cpp  solution_rgb_to_hex_conversion.h  test_rgb_to_hex_conversion.cpp
cpp/solutions/6kyu/equal_sides_of_an_array/: README.md  solution_equal_sides_of_an_array.cpp  solution_equal_sides_of_an_array.h  test_equal_sides_of_an_array.cpp
cpp/solutions/7kyu/: count_divisors.h  count_vowels.cpp
cpp/src/: main.cpp
cpp/src/solutions/4kyu/TODO/boggle_word_checker/: README.md  solution_boggle_word_checker.cpp  solution_boggle_word_checker.hpp  test_boggle_word_checker.cpp
cpp/src/solutions/4kyu/boggle_word_checker/: README.md  solution_boggle_word_checker.cpp  solution_boggle_word_checker.hpp
cpp/src/solutions/4kyu/matrix_determinant/: README.md  solution_matrix_determinant.cpp  solution_matrix_determinant.hpp  test_matrix_determinant.cpp
cpp/src/solutions/4kyu/next_bigger_number_with_the_same_digits/: README.md  solution_next_bigger_number_with_the_same_digits.cpp  solution_next_bigger_number_with_the_same_digits.hpp  test_next_bigger_number_with_the_same_digits.cpp
cpp/src/solutions/4kyu/range_extraction/: README.md  solution_range_extraction.cpp  solution_range_extraction.hpp  test_range_extraction.cpp
cpp/src/solutions/4kyu/ranking_poker_hands/: README.md  solution_ranking_poker_hands.cpp  solution_ranking_poker_hands.hpp  test_ranking_poker_hands.cpp
cpp/src/solutions/5kyu/rgb_to_hex_conversion/: README.md  solution_rgb_to_hex_conversion.cpp  solution_rgb_to_hex_conversion.hpp  test_rgb_to_hex_conversion.cpp
cpp/src/solutions/6kyu/equal_sides_of_an_array/: README.md  solution_equal_sides_of_an_array.cpp  solution_equal_sides_of_an_array.hpp  test_equal_sides_of_an_array.cpp
cpp/src/solutions/7kyu/count_the_divisors_of_a_number/: README.md  solution_count_the_divisors_of_a_number.cpp  solution_count_the_divisors_of_a_number.hpp  test_count_the_divisors_of_a_number.cpp
cpp/src/solutions/7kyu/sort_numbers/: README.md  solution_sort_numbers.cpp  solution_sort_numbers.hpp  test_sort_numbers.cpp
cpp/src/solutions/7kyu/vowel_count/: README.md  solution_vowel_count.cpp  solution_vowel_count.hpp  test_vowel_count.cpp
(+1477 files in other folders)
